@@ -153,9 +153,7 @@ import java.util.stream.Stream;
 import javax.management.MBeanServer;
 import javax.management.ObjectName;
 
-import static java.util.Collections.singleton;
 import static java.util.Collections.singletonList;
-import static java.util.Collections.singletonMap;
 import static org.apache.kafka.clients.consumer.internals.ClassicKafkaConsumer.DEFAULT_REASON;
 import static org.apache.kafka.common.requests.FetchMetadata.INVALID_SESSION_ID;
 import static org.apache.kafka.common.utils.Utils.propsToMap;
@@ -227,7 +225,7 @@ public class KafkaConsumerTest {
     private final String partitionAssigned = "Hit partition assign ";
     private final String partitionLost = "Hit partition lost ";
 
-    private final Collection<TopicPartition> singleTopicPartition = Collections.singleton(new TopicPartition(topic, 0));
+    private final Collection<TopicPartition> singleTopicPartition = Set.of(new TopicPartition(topic, 0));
     private final Time time = new MockTime();
     private final SubscriptionState subscription = new SubscriptionState(new LogContext(), AutoOffsetResetStrategy.EARLIEST);
     private final ConsumerPartitionAssignor assignor = new RoundRobinAssignor();
@@ -237,7 +235,7 @@ public class KafkaConsumerTest {
     @AfterEach
     public void cleanup() {
         if (consumer != null) {
-            consumer.close(Duration.ZERO);
+            consumer.close(CloseOptions.timeout(Duration.ZERO));
         }
     }
 
@@ -354,8 +352,10 @@ public class KafkaConsumerTest {
         assertEquals(2, consumer.metricsRegistry().reporters().size());
 
         MockMetricsReporter mockMetricsReporter = (MockMetricsReporter) consumer.metricsRegistry().reporters().stream()
-            .filter(reporter -> reporter instanceof MockMetricsReporter).findFirst().get();
+            .filter(reporter -> reporter instanceof MockMetricsReporter).findFirst().orElseThrow();
         assertEquals(consumer.clientId(), mockMetricsReporter.clientId);
+
+        consumer.close(CloseOptions.timeout(Duration.ZERO));
     }
 
     @ParameterizedTest
@@ -405,11 +405,11 @@ public class KafkaConsumerTest {
 
         ConsumerRecords<String, String> records = (ConsumerRecords<String, String>) consumer.poll(Duration.ZERO);
 
-        assertEquals(records.count(), 5);
-        assertEquals(records.partitions(), Collections.singleton(tp0));
-        assertEquals(records.records(tp0).size(), 5);
-        assertEquals(records.nextOffsets().size(), 1);
-        assertEquals(records.nextOffsets().get(tp0), new OffsetAndMetadata(5, Optional.empty(), ""));
+        assertEquals(5, records.count());
+        assertEquals(Set.of(tp0), records.partitions());
+        assertEquals(5, records.records(tp0).size());
+        assertEquals(1, records.nextOffsets().size());
+        assertEquals(new OffsetAndMetadata(5), records.nextOffsets().get(tp0));
     }
 
     // TODO: this test requires rebalance logic which is not yet implemented in the CONSUMER group protocol.
@@ -426,17 +426,17 @@ public class KafkaConsumerTest {
         ConsumerRecords<String, String> records = (ConsumerRecords<String, String>) consumer.poll(Duration.ZERO);
 
         assertEquals(invalidRecordNumber - 1, records.count());
-        assertEquals(Collections.singleton(tp0), records.partitions());
+        assertEquals(Set.of(tp0), records.partitions());
         assertEquals(invalidRecordNumber - 1, records.records(tp0).size());
         long lastOffset = records.records(tp0).get(records.records(tp0).size() - 1).offset();
         assertEquals(invalidRecordNumber - 2, lastOffset);
-        assertEquals(records.nextOffsets().size(), 1);
-        assertEquals(records.nextOffsets().get(tp0), new OffsetAndMetadata(lastOffset + 1, Optional.empty(), ""));
+        assertEquals(1, records.nextOffsets().size());
+        assertEquals(new OffsetAndMetadata(lastOffset + 1), records.nextOffsets().get(tp0));
 
         RecordDeserializationException rde = assertThrows(RecordDeserializationException.class, () -> consumer.poll(Duration.ZERO));
         assertEquals(invalidRecordOffset, rde.offset());
         assertEquals(tp0, rde.topicPartition());
-        assertEquals(rde.offset(), consumer.position(tp0));
+        assertEquals(consumer.position(tp0), rde.offset());
     }
 
     /*
@@ -483,11 +483,11 @@ public class KafkaConsumerTest {
 
         ConsumerMetadata metadata = createMetadata(subscription);
         MockClient client = new MockClient(time, metadata);
-        initMetadata(client, Collections.singletonMap(topic, 1));
+        initMetadata(client, Map.of(topic, 1));
         consumer = newConsumer(groupProtocol, time, client, subscription, metadata, assignor,
                 true, groupId, groupInstanceId, Optional.of(deserializer), false);
-        consumer.subscribe(singleton(topic), getConsumerRebalanceListener(consumer));
-        prepareRebalance(client, node, assignor, singletonList(tp), null);
+        consumer.subscribe(Set.of(topic), getConsumerRebalanceListener(consumer));
+        prepareRebalance(client, node, assignor, List.of(tp), null);
         consumer.updateAssignmentMetadataIfNeeded(time.timer(Long.MAX_VALUE));
         client.prepareResponseFrom(fetchResponse(tp, 0, recordCount), node);
         return consumer;
@@ -579,17 +579,17 @@ public class KafkaConsumerTest {
     public void testSubscription(GroupProtocol groupProtocol) {
         consumer = newConsumer(groupProtocol, groupId);
 
-        consumer.subscribe(singletonList(topic));
-        assertEquals(singleton(topic), consumer.subscription());
+        consumer.subscribe(List.of(topic));
+        assertEquals(Set.of(topic), consumer.subscription());
         assertTrue(consumer.assignment().isEmpty());
 
         consumer.subscribe(Collections.emptyList());
         assertTrue(consumer.subscription().isEmpty());
         assertTrue(consumer.assignment().isEmpty());
 
-        consumer.assign(singletonList(tp0));
+        consumer.assign(List.of(tp0));
         assertTrue(consumer.subscription().isEmpty());
-        assertEquals(singleton(tp0), consumer.assignment());
+        assertEquals(Set.of(tp0), consumer.assignment());
 
         consumer.unsubscribe();
         assertTrue(consumer.subscription().isEmpty());
@@ -615,7 +615,7 @@ public class KafkaConsumerTest {
     public void testSubscriptionOnEmptyTopic(GroupProtocol groupProtocol) {
         consumer = newConsumer(groupProtocol, groupId);
         String emptyTopic = "  ";
-        assertThrows(IllegalArgumentException.class, () -> consumer.subscribe(singletonList(emptyTopic)));
+        assertThrows(IllegalArgumentException.class, () -> consumer.subscribe(List.of(emptyTopic)));
     }
 
     @ParameterizedTest
@@ -644,14 +644,14 @@ public class KafkaConsumerTest {
         props.setProperty(ConsumerConfig.GROUP_ID_CONFIG, groupId);
         consumer = newConsumer(props, new ByteArrayDeserializer(), new ByteArrayDeserializer());
         assertThrows(IllegalStateException.class,
-            () -> consumer.subscribe(singletonList(topic)));
+            () -> consumer.subscribe(List.of(topic)));
     }
 
     @ParameterizedTest
     @EnumSource(GroupProtocol.class)
     public void testSeekNegative(GroupProtocol groupProtocol) {
         consumer = newConsumer(groupProtocol, null);
-        consumer.assign(singleton(new TopicPartition("nonExistTopic", 0)));
+        consumer.assign(Set.of(new TopicPartition("nonExistTopic", 0)));
         assertThrows(IllegalArgumentException.class,
             () -> consumer.seek(new TopicPartition("nonExistTopic", 0), -1));
     }
@@ -676,14 +676,14 @@ public class KafkaConsumerTest {
     @EnumSource(GroupProtocol.class)
     public void testAssignOnNullTopicInPartition(GroupProtocol groupProtocol) {
         consumer = newConsumer(groupProtocol, null);
-        assertThrows(IllegalArgumentException.class, () -> consumer.assign(singleton(new TopicPartition(null, 0))));
+        assertThrows(IllegalArgumentException.class, () -> consumer.assign(Set.of(new TopicPartition(null, 0))));
     }
 
     @ParameterizedTest
     @EnumSource(GroupProtocol.class)
     public void testAssignOnEmptyTopicInPartition(GroupProtocol groupProtocol) {
         consumer = newConsumer(groupProtocol, null);
-        assertThrows(IllegalArgumentException.class, () -> consumer.assign(singleton(new TopicPartition("  ", 0))));
+        assertThrows(IllegalArgumentException.class, () -> consumer.assign(Set.of(new TopicPartition("  ", 0))));
     }
 
     @ParameterizedTest
@@ -701,7 +701,7 @@ public class KafkaConsumerTest {
             assertEquals(1, MockConsumerInterceptor.INIT_COUNT.get());
             assertEquals(0, MockConsumerInterceptor.CLOSE_COUNT.get());
 
-            consumer.close(Duration.ZERO);
+            consumer.close(CloseOptions.timeout(Duration.ZERO));
             assertEquals(1, MockConsumerInterceptor.INIT_COUNT.get());
             assertEquals(1, MockConsumerInterceptor.CLOSE_COUNT.get());
             // Cluster metadata will only be updated on calling poll.
@@ -744,14 +744,14 @@ public class KafkaConsumerTest {
     public void testPause(GroupProtocol groupProtocol) {
         consumer = newConsumer(groupProtocol, groupId);
 
-        consumer.assign(singletonList(tp0));
-        assertEquals(singleton(tp0), consumer.assignment());
+        consumer.assign(List.of(tp0));
+        assertEquals(Set.of(tp0), consumer.assignment());
         assertTrue(consumer.paused().isEmpty());
 
-        consumer.pause(singleton(tp0));
-        assertEquals(singleton(tp0), consumer.paused());
+        consumer.pause(Set.of(tp0));
+        assertEquals(Set.of(tp0), consumer.paused());
 
-        consumer.resume(singleton(tp0));
+        consumer.resume(Set.of(tp0));
         assertTrue(consumer.paused().isEmpty());
 
         consumer.unsubscribe();
@@ -819,19 +819,19 @@ public class KafkaConsumerTest {
         ConsumerMetadata metadata = createMetadata(subscription);
         MockClient client = new MockClient(time, metadata);
 
-        initMetadata(client, Collections.singletonMap(topic, 1));
+        initMetadata(client, Map.of(topic, 1));
         Node node = metadata.fetch().nodes().get(0);
 
         consumer = newConsumer(groupProtocol, time, client, subscription, metadata, assignor, true, groupInstanceId);
 
-        consumer.subscribe(singleton(topic), getConsumerRebalanceListener(consumer));
-        Node coordinator = prepareRebalance(client, node, assignor, singletonList(tp0), null);
+        consumer.subscribe(Set.of(topic), getConsumerRebalanceListener(consumer));
+        Node coordinator = prepareRebalance(client, node, assignor, List.of(tp0), null);
 
         // initial fetch
         client.prepareResponseFrom(fetchResponse(tp0, 0, 0), node);
         consumer.updateAssignmentMetadataIfNeeded(time.timer(Long.MAX_VALUE));
 
-        assertEquals(singleton(tp0), consumer.assignment());
+        assertEquals(Set.of(tp0), consumer.assignment());
 
         AtomicBoolean heartbeatReceived = prepareHeartbeatResponse(client, coordinator, Errors.NONE);
 
@@ -852,12 +852,12 @@ public class KafkaConsumerTest {
         ConsumerMetadata metadata = createMetadata(subscription);
         MockClient client = new MockClient(time, metadata);
 
-        initMetadata(client, Collections.singletonMap(topic, 1));
+        initMetadata(client, Map.of(topic, 1));
         Node node = metadata.fetch().nodes().get(0);
 
         consumer = newConsumer(groupProtocol, time, client, subscription, metadata, assignor, true, groupInstanceId);
-        consumer.subscribe(singleton(topic), getConsumerRebalanceListener(consumer));
-        Node coordinator = prepareRebalance(client, node, assignor, singletonList(tp0), null);
+        consumer.subscribe(Set.of(topic), getConsumerRebalanceListener(consumer));
+        Node coordinator = prepareRebalance(client, node, assignor, List.of(tp0), null);
 
         consumer.updateAssignmentMetadataIfNeeded(time.timer(Long.MAX_VALUE));
         consumer.poll(Duration.ZERO);
@@ -883,12 +883,12 @@ public class KafkaConsumerTest {
         final ConsumerMetadata metadata = createMetadata(subscription);
         final MockClient client = new MockClient(time, metadata);
 
-        initMetadata(client, Collections.singletonMap(topic, 1));
+        initMetadata(client, Map.of(topic, 1));
         Node node = metadata.fetch().nodes().get(0);
 
         client.prepareResponseFrom(FindCoordinatorResponse.prepareResponse(Errors.NONE, groupId, node), node);
         consumer = newConsumer(groupProtocol, time, client, subscription, metadata, assignor, true, groupInstanceId);
-        consumer.subscribe(singleton(topic), getConsumerRebalanceListener(consumer));
+        consumer.subscribe(Set.of(topic), getConsumerRebalanceListener(consumer));
         // Since we would enable the heartbeat thread after received join-response which could
         // send the sync-group on behalf of the consumer if it is enqueued, we may still complete
         // the rebalance and send out the fetch; in order to avoid it we do not prepare sync response here.
@@ -908,22 +908,22 @@ public class KafkaConsumerTest {
         ConsumerMetadata metadata = createMetadata(subscription);
         MockClient client = new MockClient(time, metadata);
 
-        initMetadata(client, Collections.singletonMap(topic, 1));
+        initMetadata(client, Map.of(topic, 1));
 
         consumer = newConsumer(groupProtocol, time, client, subscription, metadata, assignor, false, null, groupInstanceId, false);
-        consumer.assign(singleton(tp0));
-        consumer.seekToBeginning(singleton(tp0));
+        consumer.assign(Set.of(tp0));
+        consumer.seekToBeginning(Set.of(tp0));
 
-        // there shouldn't be any need to lookup the coordinator or fetch committed offsets.
-        // we just lookup the starting position and send the record fetch.
-        client.prepareResponse(listOffsetsResponse(Collections.singletonMap(tp0, 50L)));
+        // there shouldn't be any need to look up the coordinator or fetch committed offsets.
+        // we just look up the starting position and send the record fetch.
+        client.prepareResponse(listOffsetsResponse(Map.of(tp0, 50L)));
         client.prepareResponse(fetchResponse(tp0, 50L, 5));
 
         ConsumerRecords<String, String> records = (ConsumerRecords<String, String>) consumer.poll(Duration.ofMillis(1));
         assertEquals(5, records.count());
         assertEquals(55L, consumer.position(tp0));
-        assertEquals(records.nextOffsets().size(), 1);
-        assertEquals(records.nextOffsets().get(tp0), new OffsetAndMetadata(55L, Optional.empty(), ""));
+        assertEquals(1, records.nextOffsets().size());
+        assertEquals(new OffsetAndMetadata(55L), records.nextOffsets().get(tp0));
     }
 
     // TODO: this test triggers a bug with the CONSUMER group protocol implementation.
@@ -934,12 +934,12 @@ public class KafkaConsumerTest {
         ConsumerMetadata metadata = createMetadata(subscription);
         MockClient client = new MockClient(time, metadata);
 
-        initMetadata(client, Collections.singletonMap(topic, 1));
+        initMetadata(client, Map.of(topic, 1));
         Node node = metadata.fetch().nodes().get(0);
 
         // create a consumer with groupID with manual assignment
         consumer = newConsumer(groupProtocol, time, client, subscription, metadata, assignor, true, groupInstanceId);
-        consumer.assign(singleton(tp0));
+        consumer.assign(Set.of(tp0));
 
         // 1st coordinator error should cause coordinator unknown
         client.prepareResponseFrom(FindCoordinatorResponse.prepareResponse(Errors.COORDINATOR_NOT_AVAILABLE, groupId, node), node);
@@ -948,23 +948,23 @@ public class KafkaConsumerTest {
         // 2nd coordinator error should find the correct coordinator and clear the findCoordinatorFuture
         client.prepareResponseFrom(FindCoordinatorResponse.prepareResponse(Errors.NONE, groupId, node), node);
 
-        client.prepareResponse(offsetResponse(Collections.singletonMap(tp0, 50L), Errors.NONE));
+        client.prepareResponse(offsetResponse(Map.of(tp0, 50L), Errors.NONE));
         client.prepareResponse(fetchResponse(tp0, 50L, 5));
 
         @SuppressWarnings("unchecked")
         ConsumerRecords<String, String> records = (ConsumerRecords<String, String>) consumer.poll(Duration.ofMillis(0));
         assertEquals(5, records.count());
         assertEquals(55L, consumer.position(tp0));
-        assertEquals(records.nextOffsets().size(), 1);
-        assertEquals(records.nextOffsets().get(tp0), new OffsetAndMetadata(55L, Optional.empty(), ""));
+        assertEquals(1, records.nextOffsets().size());
+        assertEquals(new OffsetAndMetadata(55L), records.nextOffsets().get(tp0));
 
         // after coordinator found, consumer should be able to commit the offset successfully
-        client.prepareResponse(offsetCommitResponse(Collections.singletonMap(tp0, Errors.NONE)));
-        consumer.commitSync(Collections.singletonMap(tp0, new OffsetAndMetadata(55L)));
+        client.prepareResponse(offsetCommitResponse(Map.of(tp0, Errors.NONE)));
+        consumer.commitSync(Map.of(tp0, new OffsetAndMetadata(55L)));
 
         // verify the offset is committed
-        client.prepareResponse(offsetResponse(Collections.singletonMap(tp0, 55L), Errors.NONE));
-        assertEquals(55, consumer.committed(Collections.singleton(tp0), Duration.ZERO).get(tp0).offset());
+        client.prepareResponse(offsetResponse(Map.of(tp0, 55L), Errors.NONE));
+        assertEquals(55, consumer.committed(Set.of(tp0), Duration.ZERO).get(tp0).offset());
     }
 
     @ParameterizedTest
@@ -975,7 +975,7 @@ public class KafkaConsumerTest {
 
         ConsumerMetadata metadata = createMetadata(subscription);
         MockClient client = new MockClient(time, metadata);
-        initMetadata(client, Collections.singletonMap(topic, 2));
+        initMetadata(client, Map.of(topic, 2));
 
         if (groupProtocol == GroupProtocol.CONSUMER) {
             Node node = metadata.fetch().nodes().get(0);
@@ -984,8 +984,8 @@ public class KafkaConsumerTest {
 
         consumer = newConsumerNoAutoCommit(groupProtocol, time, client, subscription, metadata);
         consumer.assign(Arrays.asList(tp0, tp1));
-        consumer.seekToEnd(singleton(tp0));
-        consumer.seekToBeginning(singleton(tp1));
+        consumer.seekToEnd(Set.of(tp0));
+        consumer.seekToBeginning(Set.of(tp1));
 
         client.prepareResponse(body -> {
             ListOffsetsRequest request = (ListOffsetsRequest) body;
@@ -1002,13 +1002,13 @@ public class KafkaConsumerTest {
                     .setPartitionIndex(tp1.partition())
                     .setTimestamp(ListOffsetsRequest.EARLIEST_TIMESTAMP);
             return partitions.contains(expectedTp0) && partitions.contains(expectedTp1);
-        }, listOffsetsResponse(Collections.singletonMap(tp0, 50L), Collections.singletonMap(tp1, Errors.NOT_LEADER_OR_FOLLOWER)));
+        }, listOffsetsResponse(Map.of(tp0, 50L), Map.of(tp1, Errors.NOT_LEADER_OR_FOLLOWER)));
         client.prepareResponse(
             body -> {
                 FetchRequest request = (FetchRequest) body;
                 Map<TopicIdPartition, FetchRequest.PartitionData> fetchData = request.fetchData(topicNames);
                 TopicIdPartition tidp0 = new TopicIdPartition(topicIds.get(tp0.topic()), tp0);
-                return fetchData.keySet().equals(singleton(tidp0)) &&
+                return fetchData.keySet().equals(Set.of(tidp0)) &&
                         fetchData.get(tidp0).fetchOffset == 50L;
 
             }, fetchResponse(tp0, 50L, 5));
@@ -1016,9 +1016,9 @@ public class KafkaConsumerTest {
         @SuppressWarnings("unchecked")
         ConsumerRecords<String, String> records = (ConsumerRecords<String, String>) consumer.poll(Duration.ofMillis(1));
         assertEquals(5, records.count());
-        assertEquals(singleton(tp0), records.partitions());
-        assertEquals(records.nextOffsets().size(), 1);
-        assertEquals(records.nextOffsets().get(tp0), new OffsetAndMetadata(records.records(tp0).get(records.count() - 1).offset() + 1, Optional.empty(), ""));
+        assertEquals(Set.of(tp0), records.partitions());
+        assertEquals(1, records.nextOffsets().size());
+        assertEquals(new OffsetAndMetadata(records.records(tp0).get(records.count() - 1).offset() + 1), records.nextOffsets().get(tp0));
     }
 
     private void initMetadata(MockClient mockClient, Map<String, Integer> partitionCounts) {
@@ -1038,16 +1038,16 @@ public class KafkaConsumerTest {
         ConsumerMetadata metadata = createMetadata(subscription);
         MockClient client = new MockClient(time, metadata);
 
-        initMetadata(client, Collections.singletonMap(topic, 1));
+        initMetadata(client, Map.of(topic, 1));
         Node node = metadata.fetch().nodes().get(0);
 
         client.prepareResponseFrom(FindCoordinatorResponse.prepareResponse(Errors.NONE, groupId, node), node);
         Node coordinator = new Node(Integer.MAX_VALUE - node.id(), node.host(), node.port());
-        client.prepareResponseFrom(offsetResponse(Collections.singletonMap(tp0, -1L), Errors.NONE), coordinator);
+        client.prepareResponseFrom(offsetResponse(Map.of(tp0, -1L), Errors.NONE), coordinator);
 
         consumer = newConsumer(groupProtocol, time, client, subscription, metadata, assignor,
                 true, groupId, groupInstanceId, false);
-        consumer.assign(singletonList(tp0));
+        consumer.assign(List.of(tp0));
 
         if (groupProtocol == GroupProtocol.CONSUMER) {
             // New consumer poll(ZERO) needs to wait for the offset fetch event added by a call to poll, to be processed
@@ -1067,17 +1067,17 @@ public class KafkaConsumerTest {
         ConsumerMetadata metadata = createMetadata(subscription);
         MockClient client = new MockClient(time, metadata);
 
-        initMetadata(client, Collections.singletonMap(topic, 1));
+        initMetadata(client, Map.of(topic, 1));
         Node node = metadata.fetch().nodes().get(0);
 
         client.prepareResponseFrom(FindCoordinatorResponse.prepareResponse(Errors.NONE, groupId, node), node);
         KafkaConsumer<String, String> consumer = newConsumer(groupProtocol, time, client, subscription, metadata, assignor,
                 true, groupId, groupInstanceId, false);
-        consumer.assign(singletonList(tp0));
+        consumer.assign(List.of(tp0));
 
         Node coordinator = new Node(Integer.MAX_VALUE - node.id(), node.host(), node.port());
 
-        client.prepareResponseFrom(offsetResponse(Collections.singletonMap(tp0, 539L), Errors.NONE), coordinator);
+        client.prepareResponseFrom(offsetResponse(Map.of(tp0, 539L), Errors.NONE), coordinator);
         consumer.poll(Duration.ZERO);
 
         assertEquals(539L, consumer.position(tp0));
@@ -1103,18 +1103,18 @@ public class KafkaConsumerTest {
         ConsumerMetadata metadata = createMetadata(subscription);
         MockClient client = new MockClient(time, metadata);
 
-        initMetadata(client, Collections.singletonMap(topic, 1));
+        initMetadata(client, Map.of(topic, 1));
         Node node = metadata.fetch().nodes().get(0);
 
         client.prepareResponseFrom(FindCoordinatorResponse.prepareResponse(Errors.NONE, groupId, node), node);
         consumer = newConsumer(groupProtocol, time, client, subscription, metadata, assignor,
                 true, groupId, groupInstanceId, false);
-        consumer.assign(singletonList(tp0));
+        consumer.assign(List.of(tp0));
 
         Node coordinator = new Node(Integer.MAX_VALUE - node.id(), node.host(), node.port());
 
-        client.prepareResponseFrom(offsetResponse(Collections.singletonMap(tp0, -1L), Errors.NONE), coordinator);
-        client.prepareResponse(listOffsetsResponse(Collections.singletonMap(tp0, 50L)));
+        client.prepareResponseFrom(offsetResponse(Map.of(tp0, -1L), Errors.NONE), coordinator);
+        client.prepareResponse(listOffsetsResponse(Map.of(tp0, 50L)));
 
         consumer.poll(Duration.ZERO);
     }
@@ -1126,14 +1126,14 @@ public class KafkaConsumerTest {
         ConsumerMetadata metadata = createMetadata(subscription);
         MockClient client = new MockClient(time, metadata);
 
-        initMetadata(client, Collections.singletonMap(topic, 1));
+        initMetadata(client, Map.of(topic, 1));
 
         consumer = newConsumer(groupProtocol, time, client, subscription, metadata, assignor,
                 true, groupId, Optional.empty(), false);
-        consumer.assign(singletonList(tp0));
+        consumer.assign(List.of(tp0));
         consumer.seek(tp0, 20L);
         consumer.poll(Duration.ZERO);
-        assertEquals(subscription.validPosition(tp0).offset, 20L);
+        assertEquals(20L, subscription.validPosition(tp0).offset);
     }
 
     @ParameterizedTest
@@ -1145,19 +1145,19 @@ public class KafkaConsumerTest {
         ConsumerMetadata metadata = createMetadata(subscription);
         MockClient client = new MockClient(time, metadata);
 
-        initMetadata(client, Collections.singletonMap(topic, 2));
+        initMetadata(client, Map.of(topic, 2));
         Node node = metadata.fetch().nodes().get(0);
 
         client.prepareResponseFrom(FindCoordinatorResponse.prepareResponse(Errors.NONE, groupId, node), node);
         consumer = newConsumer(groupProtocol, time, client, subscription, metadata, assignor, true, groupInstanceId);
-        consumer.assign(singletonList(tp0));
+        consumer.assign(List.of(tp0));
 
         // lookup coordinator
         Node coordinator = new Node(Integer.MAX_VALUE - node.id(), node.host(), node.port());
 
         // fetch offset for one topic
-        client.prepareResponseFrom(offsetResponse(Collections.singletonMap(tp0, offset1), Errors.NONE), coordinator);
-        assertEquals(offset1, consumer.committed(Collections.singleton(tp0)).get(tp0).offset());
+        client.prepareResponseFrom(offsetResponse(Map.of(tp0, offset1), Errors.NONE), coordinator);
+        assertEquals(offset1, consumer.committed(Set.of(tp0)).get(tp0).offset());
 
         consumer.assign(Arrays.asList(tp0, tp1));
 
@@ -1165,20 +1165,22 @@ public class KafkaConsumerTest {
         Map<TopicPartition, Long> offsets = new HashMap<>();
         offsets.put(tp0, offset1);
         client.prepareResponseFrom(offsetResponse(offsets, Errors.NONE), coordinator);
-        assertEquals(offset1, consumer.committed(Collections.singleton(tp0)).get(tp0).offset());
+        assertEquals(offset1, consumer.committed(Set.of(tp0)).get(tp0).offset());
 
         offsets.remove(tp0);
         offsets.put(tp1, offset2);
         client.prepareResponseFrom(offsetResponse(offsets, Errors.NONE), coordinator);
-        assertEquals(offset2, consumer.committed(Collections.singleton(tp1)).get(tp1).offset());
+        assertEquals(offset2, consumer.committed(Set.of(tp1)).get(tp1).offset());
     }
 
+    @SuppressWarnings("resource")
     @ParameterizedTest
     @EnumSource(GroupProtocol.class)
     public void testFetchStableOffsetThrowInCommitted(GroupProtocol groupProtocol) {
-        assertThrows(UnsupportedVersionException.class, () -> setupThrowableConsumer(groupProtocol).committed(Collections.singleton(tp0)));
+        assertThrows(UnsupportedVersionException.class, () -> setupThrowableConsumer(groupProtocol).committed(Set.of(tp0)));
     }
 
+    @SuppressWarnings("resource")
     @ParameterizedTest
     @EnumSource(GroupProtocol.class)
     public void testFetchStableOffsetThrowInPoll(GroupProtocol groupProtocol) throws InterruptedException {
@@ -1195,6 +1197,7 @@ public class KafkaConsumerTest {
         }, "Failed to throw UnsupportedVersionException in poll");
     }
 
+    @SuppressWarnings("resource")
     @ParameterizedTest
     @EnumSource(GroupProtocol.class)
     public void testFetchStableOffsetThrowInPosition(GroupProtocol groupProtocol) {
@@ -1207,7 +1210,7 @@ public class KafkaConsumerTest {
         ConsumerMetadata metadata = createMetadata(subscription);
         MockClient client = new MockClient(time, metadata);
 
-        initMetadata(client, Collections.singletonMap(topic, 2));
+        initMetadata(client, Map.of(topic, 2));
         client.setNodeApiVersions(NodeApiVersions.create(ApiKeys.OFFSET_FETCH.id, (short) 0, (short) 6));
 
         Node node = metadata.fetch().nodes().get(0);
@@ -1215,12 +1218,12 @@ public class KafkaConsumerTest {
         client.prepareResponseFrom(FindCoordinatorResponse.prepareResponse(Errors.NONE, groupId, node), node);
         consumer = newConsumer(
                 groupProtocol, time, client, subscription, metadata, assignor, true, groupId, groupInstanceId, true);
-        consumer.assign(singletonList(tp0));
+        consumer.assign(List.of(tp0));
 
         Node coordinator = new Node(Integer.MAX_VALUE - node.id(), node.host(), node.port());
 
         client.prepareResponseFrom(offsetResponse(
-            Collections.singletonMap(tp0, offset1), Errors.NONE), coordinator);
+            Map.of(tp0, offset1), Errors.NONE), coordinator);
         return consumer;
     }
 
@@ -1232,7 +1235,7 @@ public class KafkaConsumerTest {
         ConsumerMetadata metadata = createMetadata(subscription);
         MockClient client = new MockClient(time, metadata);
 
-        initMetadata(client, Collections.singletonMap(topic, 2));
+        initMetadata(client, Map.of(topic, 2));
         Node node = metadata.fetch().nodes().get(0);
 
         client.prepareResponseFrom(FindCoordinatorResponse.prepareResponse(Errors.NONE, groupId, node), node);
@@ -1258,12 +1261,12 @@ public class KafkaConsumerTest {
         ConsumerMetadata metadata = createMetadata(subscription);
         MockClient client = new MockClient(time, metadata);
 
-        initMetadata(client, Collections.singletonMap(topic, 1));
+        initMetadata(client, Map.of(topic, 1));
         Node node = metadata.fetch().nodes().get(0);
 
         consumer = newConsumer(groupProtocol, time, client, subscription, metadata, assignor, true, groupInstanceId);
-        consumer.subscribe(singleton(topic), getConsumerRebalanceListener(consumer));
-        Node coordinator = prepareRebalance(client, node, assignor, singletonList(tp0), null);
+        consumer.subscribe(Set.of(topic), getConsumerRebalanceListener(consumer));
+        Node coordinator = prepareRebalance(client, node, assignor, List.of(tp0), null);
 
         consumer.updateAssignmentMetadataIfNeeded(time.timer(Long.MAX_VALUE));
         consumer.poll(Duration.ZERO);
@@ -1301,7 +1304,7 @@ public class KafkaConsumerTest {
         Node node = metadata.fetch().nodes().get(0);
 
         consumer = newConsumer(groupProtocol, time, client, subscription, metadata, assignor, true, groupInstanceId);
-        prepareRebalance(client, node, singleton(topic), assignor, singletonList(tp0), null);
+        prepareRebalance(client, node, Set.of(topic), assignor, List.of(tp0), null);
 
         consumer.subscribe(Pattern.compile(topic), getConsumerRebalanceListener(consumer));
 
@@ -1309,8 +1312,8 @@ public class KafkaConsumerTest {
 
         consumer.updateAssignmentMetadataIfNeeded(time.timer(Long.MAX_VALUE));
 
-        assertEquals(singleton(topic), consumer.subscription());
-        assertEquals(singleton(tp0), consumer.assignment());
+        assertEquals(Set.of(topic), consumer.subscription());
+        assertEquals(Set.of(tp0), consumer.assignment());
     }
 
     // TODO: this test requires rebalance logic which is not yet implemented in the CONSUMER group protocol.
@@ -1333,21 +1336,21 @@ public class KafkaConsumerTest {
 
         consumer = newConsumer(groupProtocol, time, client, subscription, metadata, assignor, false, groupInstanceId);
 
-        Node coordinator = prepareRebalance(client, node, singleton(topic), assignor, singletonList(tp0), null);
+        Node coordinator = prepareRebalance(client, node, Set.of(topic), assignor, List.of(tp0), null);
         consumer.subscribe(Pattern.compile(topic), getConsumerRebalanceListener(consumer));
 
         consumer.updateAssignmentMetadataIfNeeded(time.timer(Long.MAX_VALUE));
         consumer.poll(Duration.ZERO);
 
-        assertEquals(singleton(topic), consumer.subscription());
+        assertEquals(Set.of(topic), consumer.subscription());
 
         consumer.subscribe(Pattern.compile(otherTopic), getConsumerRebalanceListener(consumer));
 
         client.prepareMetadataUpdate(RequestTestUtils.metadataUpdateWithIds(1, partitionCounts, topicIds));
-        prepareRebalance(client, node, singleton(otherTopic), assignor, singletonList(otherTopicPartition), coordinator);
+        prepareRebalance(client, node, Set.of(otherTopic), assignor, List.of(otherTopicPartition), coordinator);
         consumer.poll(Duration.ZERO);
 
-        assertEquals(singleton(otherTopic), consumer.subscription());
+        assertEquals(Set.of(otherTopic), consumer.subscription());
     }
 
     // TODO: this test requires rebalance logic which is not yet implemented in the CONSUMER group protocol.
@@ -1358,12 +1361,12 @@ public class KafkaConsumerTest {
         ConsumerMetadata metadata = createMetadata(subscription);
         MockClient client = new MockClient(time, metadata);
 
-        initMetadata(client, Collections.singletonMap(topic, 1));
+        initMetadata(client, Map.of(topic, 1));
         Node node = metadata.fetch().nodes().get(0);
 
         consumer = newConsumer(groupProtocol, time, client, subscription, metadata, assignor, true, groupInstanceId);
-        consumer.subscribe(singleton(topic), getConsumerRebalanceListener(consumer));
-        prepareRebalance(client, node, assignor, singletonList(tp0), null);
+        consumer.subscribe(Set.of(topic), getConsumerRebalanceListener(consumer));
+        prepareRebalance(client, node, assignor, List.of(tp0), null);
 
         consumer.updateAssignmentMetadataIfNeeded(time.timer(Long.MAX_VALUE));
         consumer.poll(Duration.ZERO);
@@ -1383,8 +1386,8 @@ public class KafkaConsumerTest {
         @SuppressWarnings("unchecked")
         ConsumerRecords<String, String> records = (ConsumerRecords<String, String>) consumer.poll(Duration.ZERO);
         assertEquals(5, records.count());
-        assertEquals(records.nextOffsets().size(), 1);
-        assertEquals(records.nextOffsets().get(tp0), new OffsetAndMetadata(5, Optional.empty(), ""));
+        assertEquals(1, records.nextOffsets().size());
+        assertEquals(new OffsetAndMetadata(5), records.nextOffsets().get(tp0));
         // Increment time asynchronously to clear timeouts in closing the consumer
         final ScheduledExecutorService exec = Executors.newSingleThreadScheduledExecutor();
         exec.scheduleAtFixedRate(() -> time.sleep(sessionTimeoutMs), 0L, 10L, TimeUnit.MILLISECONDS);
@@ -1399,12 +1402,12 @@ public class KafkaConsumerTest {
         final ConsumerMetadata metadata = createMetadata(subscription);
         final MockClient client = new MockClient(time, metadata);
 
-        initMetadata(client, Collections.singletonMap(topic, 1));
+        initMetadata(client, Map.of(topic, 1));
         Node node = metadata.fetch().nodes().get(0);
 
         consumer = newConsumer(groupProtocol, time, client, subscription, metadata, assignor, false, groupInstanceId);
-        consumer.subscribe(singleton(topic), getConsumerRebalanceListener(consumer));
-        prepareRebalance(client, node, assignor, singletonList(tp0), null);
+        consumer.subscribe(Set.of(topic), getConsumerRebalanceListener(consumer));
+        prepareRebalance(client, node, assignor, List.of(tp0), null);
 
         consumer.updateAssignmentMetadataIfNeeded(time.timer(Long.MAX_VALUE));
         consumer.poll(Duration.ZERO);
@@ -1426,13 +1429,13 @@ public class KafkaConsumerTest {
         ConsumerMetadata metadata = createMetadata(subscription);
         MockClient client = new MockClient(time, metadata);
 
-        initMetadata(client, Collections.singletonMap(topic, 1));
+        initMetadata(client, Map.of(topic, 1));
         Node node = metadata.fetch().nodes().get(0);
 
         consumer = newConsumer(groupProtocol, time, client, subscription, metadata, assignor, true, groupInstanceId);
-        consumer.subscribe(singletonList(topic), getConsumerRebalanceListener(consumer));
+        consumer.subscribe(List.of(topic), getConsumerRebalanceListener(consumer));
 
-        prepareRebalance(client, node, assignor, singletonList(tp0), null);
+        prepareRebalance(client, node, assignor, List.of(tp0), null);
 
         Map<TopicPartition, FetchInfo> fetches1 = new HashMap<>();
         fetches1.put(tp0, new FetchInfo(0, 1));
@@ -1444,7 +1447,7 @@ public class KafkaConsumerTest {
         @SuppressWarnings("unchecked")
         ConsumerRecords<String, String> records = (ConsumerRecords<String, String>) consumer.poll(Duration.ZERO);
         assertEquals(0, records.count());
-        assertEquals(records.nextOffsets().size(), 0);
+        assertEquals(0, records.nextOffsets().size());
     }
 
     /**
@@ -1544,9 +1547,9 @@ public class KafkaConsumerTest {
         assertEquals(101, records.count());
         assertEquals(2L, consumer.position(tp0));
         assertEquals(100L, consumer.position(t3p0));
-        assertEquals(records.nextOffsets().size(), 2);
-        assertEquals(records.nextOffsets().get(tp0), new OffsetAndMetadata(2, Optional.empty(), ""));
-        assertEquals(records.nextOffsets().get(t3p0), new OffsetAndMetadata(100, Optional.empty(), ""));
+        assertEquals(2, records.nextOffsets().size());
+        assertEquals(new OffsetAndMetadata(2), records.nextOffsets().get(tp0));
+        assertEquals(new OffsetAndMetadata(100), records.nextOffsets().get(t3p0));
 
         // verify that the offset commits occurred as expected
         assertTrue(commitReceived.get());
@@ -1594,23 +1597,23 @@ public class KafkaConsumerTest {
         initializeSubscriptionWithSingleTopic(consumer, getConsumerRebalanceListener(consumer));
 
         // mock rebalance responses
-        prepareRebalance(client, node, assignor, singletonList(tp0), null);
+        prepareRebalance(client, node, assignor, List.of(tp0), null);
 
         consumer.updateAssignmentMetadataIfNeeded(time.timer(Long.MAX_VALUE));
         consumer.poll(Duration.ZERO);
 
         // verify that subscription is still the same, and now assignment has caught up
-        assertEquals(singleton(topic), consumer.subscription());
-        assertEquals(singleton(tp0), consumer.assignment());
+        assertEquals(Set.of(topic), consumer.subscription());
+        assertEquals(Set.of(tp0), consumer.assignment());
 
         consumer.poll(Duration.ZERO);
 
         // subscription change
-        consumer.subscribe(singleton(topic2), getConsumerRebalanceListener(consumer));
+        consumer.subscribe(Set.of(topic2), getConsumerRebalanceListener(consumer));
 
         // verify that subscription has changed but assignment is still unchanged
-        assertEquals(singleton(topic2), consumer.subscription());
-        assertEquals(singleton(tp0), consumer.assignment());
+        assertEquals(Set.of(topic2), consumer.subscription());
+        assertEquals(Set.of(tp0), consumer.assignment());
 
         // the auto commit is disabled, so no offset commit request should be sent
         for (ClientRequest req: client.requests())
@@ -1638,7 +1641,7 @@ public class KafkaConsumerTest {
         ConsumerMetadata metadata = createMetadata(subscription);
         MockClient client = new MockClient(time, metadata);
 
-        initMetadata(client, Collections.singletonMap(topic, 1));
+        initMetadata(client, Map.of(topic, 1));
         Node node = metadata.fetch().nodes().get(0);
 
         CooperativeStickyAssignor assignor = new CooperativeStickyAssignor();
@@ -1646,7 +1649,7 @@ public class KafkaConsumerTest {
 
         initializeSubscriptionWithSingleTopic(consumer, getExceptionConsumerRebalanceListener());
 
-        prepareRebalance(client, node, assignor, singletonList(tp0), null);
+        prepareRebalance(client, node, assignor, List.of(tp0), null);
 
         RuntimeException assignmentException = assertThrows(RuntimeException.class,
             () -> consumer.updateAssignmentMetadataIfNeeded(time.timer(Long.MAX_VALUE)));
@@ -1664,14 +1667,14 @@ public class KafkaConsumerTest {
         ConsumerMetadata metadata = createMetadata(subscription);
         MockClient client = new MockClient(time, metadata);
 
-        initMetadata(client, Collections.singletonMap(topic, 1));
+        initMetadata(client, Map.of(topic, 1));
         Node node = metadata.fetch().nodes().get(0);
 
         CooperativeStickyAssignor assignor = new CooperativeStickyAssignor();
         consumer = newConsumer(groupProtocol, time, client, subscription, metadata, assignor, false, groupInstanceId);
 
         initializeSubscriptionWithSingleTopic(consumer, getExceptionConsumerRebalanceListener());
-        Node coordinator = prepareRebalance(client, node, assignor, singletonList(tp0), null);
+        Node coordinator = prepareRebalance(client, node, assignor, List.of(tp0), null);
 
         RuntimeException assignException = assertThrows(RuntimeException.class,
             () -> consumer.updateAssignmentMetadataIfNeeded(time.timer(Long.MAX_VALUE)));
@@ -1688,9 +1691,9 @@ public class KafkaConsumerTest {
 
     private void initializeSubscriptionWithSingleTopic(KafkaConsumer<?, ?> consumer,
                                                        ConsumerRebalanceListener consumerRebalanceListener) {
-        consumer.subscribe(singleton(topic), consumerRebalanceListener);
+        consumer.subscribe(Set.of(topic), consumerRebalanceListener);
         // verify that subscription has changed but assignment is still unchanged
-        assertEquals(singleton(topic), consumer.subscription());
+        assertEquals(Set.of(topic), consumer.subscription());
         assertEquals(Collections.emptySet(), consumer.assignment());
     }
 
@@ -1716,36 +1719,36 @@ public class KafkaConsumerTest {
         Node coordinator = new Node(Integer.MAX_VALUE - node.id(), node.host(), node.port());
 
         // manual assignment
-        consumer.assign(singleton(tp0));
-        consumer.seekToBeginning(singleton(tp0));
+        consumer.assign(Set.of(tp0));
+        consumer.seekToBeginning(Set.of(tp0));
 
         // fetch offset for one topic
-        client.prepareResponseFrom(offsetResponse(Collections.singletonMap(tp0, 0L), Errors.NONE), coordinator);
-        assertEquals(0, consumer.committed(Collections.singleton(tp0)).get(tp0).offset());
+        client.prepareResponseFrom(offsetResponse(Map.of(tp0, 0L), Errors.NONE), coordinator);
+        assertEquals(0, consumer.committed(Set.of(tp0)).get(tp0).offset());
 
         // verify that assignment immediately changes
-        assertEquals(consumer.assignment(), singleton(tp0));
+        assertEquals(Set.of(tp0), consumer.assignment());
 
-        // there shouldn't be any need to lookup the coordinator or fetch committed offsets.
-        // we just lookup the starting position and send the record fetch.
-        client.prepareResponse(listOffsetsResponse(Collections.singletonMap(tp0, 10L)));
+        // there shouldn't be any need to look up the coordinator or fetch committed offsets.
+        // we just look up the starting position and send the record fetch.
+        client.prepareResponse(listOffsetsResponse(Map.of(tp0, 10L)));
         client.prepareResponse(fetchResponse(tp0, 10L, 1));
 
         ConsumerRecords<String, String> records = (ConsumerRecords<String, String>) consumer.poll(Duration.ofMillis(100));
 
         assertEquals(1, records.count());
         assertEquals(11L, consumer.position(tp0));
-        assertEquals(records.nextOffsets().size(), 1);
-        assertEquals(records.nextOffsets().get(tp0), new OffsetAndMetadata(11L, Optional.empty(), ""));
+        assertEquals(1, records.nextOffsets().size());
+        assertEquals(new OffsetAndMetadata(11L), records.nextOffsets().get(tp0));
 
         // mock the offset commit response for to be revoked partitions
         AtomicBoolean commitReceived = prepareOffsetCommitResponse(client, coordinator, tp0, 11);
 
         // new manual assignment
-        consumer.assign(singleton(t2p0));
+        consumer.assign(Set.of(t2p0));
 
         // verify that assignment immediately changes
-        assertEquals(consumer.assignment(), singleton(t2p0));
+        assertEquals(Set.of(t2p0), consumer.assignment());
         // verify that the offset commits occurred as expected
         assertTrue(commitReceived.get());
 
@@ -1773,39 +1776,39 @@ public class KafkaConsumerTest {
         Node coordinator = new Node(Integer.MAX_VALUE - node.id(), node.host(), node.port());
 
         // manual assignment
-        consumer.assign(singleton(tp0));
-        consumer.seekToBeginning(singleton(tp0));
+        consumer.assign(Set.of(tp0));
+        consumer.seekToBeginning(Set.of(tp0));
 
         // fetch offset for one topic
         client.prepareResponseFrom(
-                offsetResponse(Collections.singletonMap(tp0, 0L), Errors.NONE),
+                offsetResponse(Map.of(tp0, 0L), Errors.NONE),
                 coordinator);
-        assertEquals(0, consumer.committed(Collections.singleton(tp0)).get(tp0).offset());
+        assertEquals(0, consumer.committed(Set.of(tp0)).get(tp0).offset());
 
         // verify that assignment immediately changes
-        assertEquals(consumer.assignment(), singleton(tp0));
+        assertEquals(Set.of(tp0), consumer.assignment());
 
-        // there shouldn't be any need to lookup the coordinator or fetch committed offsets.
-        // we just lookup the starting position and send the record fetch.
-        client.prepareResponse(listOffsetsResponse(Collections.singletonMap(tp0, 10L)));
+        // there shouldn't be any need to look up the coordinator or fetch committed offsets.
+        // we just look up the starting position and send the record fetch.
+        client.prepareResponse(listOffsetsResponse(Map.of(tp0, 10L)));
         client.prepareResponse(fetchResponse(tp0, 10L, 1));
 
         @SuppressWarnings("unchecked")
         ConsumerRecords<String, String> records = (ConsumerRecords<String, String>) consumer.poll(Duration.ofMillis(1));
         assertEquals(1, records.count());
         assertEquals(11L, consumer.position(tp0));
-        assertEquals(records.nextOffsets().size(), 1);
-        assertEquals(records.nextOffsets().get(tp0), new OffsetAndMetadata(11L, Optional.empty(), ""));
+        assertEquals(1, records.nextOffsets().size());
+        assertEquals(new OffsetAndMetadata(11L), records.nextOffsets().get(tp0));
 
         // new manual assignment
-        consumer.assign(singleton(t2p0));
+        consumer.assign(Set.of(t2p0));
 
         // verify that assignment immediately changes
-        assertEquals(consumer.assignment(), singleton(t2p0));
+        assertEquals(Set.of(t2p0), consumer.assignment());
 
         // the auto commit is disabled, so no offset commit request should be sent
         for (ClientRequest req : client.requests())
-            assertNotSame(req.requestBuilder().apiKey(), ApiKeys.OFFSET_COMMIT);
+            assertNotSame(ApiKeys.OFFSET_COMMIT, req.requestBuilder().apiKey());
 
         client.requests().clear();
     }
@@ -1816,7 +1819,7 @@ public class KafkaConsumerTest {
         ConsumerMetadata metadata = createMetadata(subscription);
         MockClient client = new MockClient(time, metadata);
 
-        initMetadata(client, Collections.singletonMap(topic, 2));
+        initMetadata(client, Map.of(topic, 2));
         Node node = metadata.fetch().nodes().get(0);
 
         ConsumerPartitionAssignor assignor = new RangeAssignor();
@@ -1842,12 +1845,12 @@ public class KafkaConsumerTest {
         offsets.put(tp1, 0L);
 
         client.prepareResponseFrom(offsetResponse(offsets, Errors.NONE), coordinator);
-        assertEquals(0, consumer.committed(Collections.singleton(tp0)).get(tp0).offset());
+        assertEquals(0, consumer.committed(Set.of(tp0)).get(tp0).offset());
 
         offsets.remove(tp0);
         offsets.put(tp1, 0L);
         client.prepareResponseFrom(offsetResponse(offsets, Errors.NONE), coordinator);
-        assertEquals(0, consumer.committed(Collections.singleton(tp1)).get(tp1).offset());
+        assertEquals(0, consumer.committed(Set.of(tp1)).get(tp1).offset());
 
         // fetch and verify consumer's position in the two partitions
         final Map<TopicPartition, Long> offsetResponse = new HashMap<>();
@@ -1932,7 +1935,7 @@ public class KafkaConsumerTest {
         Map<TopicPartition, Errors> response = new HashMap<>();
         response.put(tp0, Errors.NONE);
         OffsetCommitResponse commitResponse = offsetCommitResponse(response);
-        consumerCloseTest(groupProtocol, 5000, singletonList(commitResponse), 5000, false);
+        consumerCloseTest(groupProtocol, 5000, List.of(commitResponse), 5000, false);
     }
 
     // TODO: this test requires rebalance logic which is not yet implemented in the CONSUMER group protocol.
@@ -1956,32 +1959,34 @@ public class KafkaConsumerTest {
     public void testCloseShouldBeIdempotent(GroupProtocol groupProtocol) {
         ConsumerMetadata metadata = createMetadata(subscription);
         MockClient client = spy(new MockClient(time, metadata));
-        initMetadata(client, singletonMap(topic, 1));
+        initMetadata(client, Map.of(topic, 1));
 
         consumer = newConsumer(groupProtocol, time, client, subscription, metadata, assignor, false, groupInstanceId);
 
-        consumer.close(Duration.ZERO);
-        consumer.close(Duration.ZERO);
+        consumer.close(CloseOptions.timeout(Duration.ZERO));
+        consumer.close(CloseOptions.timeout(Duration.ZERO));
 
         // verify that the call is idempotent by checking that the network client is only closed once.
         verify(client).close();
     }
 
+    @SuppressWarnings("resource")
     @ParameterizedTest
     @EnumSource(GroupProtocol.class)
     public void testOperationsBySubscribingConsumerWithDefaultGroupId(GroupProtocol groupProtocol) {
-        try (KafkaConsumer<byte[], byte[]> consumer = newConsumer(groupProtocol, null, Optional.of(Boolean.TRUE))) {
+        try {
+            newConsumer(groupProtocol, null, Optional.of(Boolean.TRUE));
             fail("Expected an InvalidConfigurationException");
         } catch (InvalidConfigurationException e) {
             // OK, expected
         }
 
         try (KafkaConsumer<byte[], byte[]> consumer = newConsumer(groupProtocol, null)) {
-            assertThrows(InvalidGroupIdException.class, () -> consumer.subscribe(Collections.singleton(topic)));
+            assertThrows(InvalidGroupIdException.class, () -> consumer.subscribe(Set.of(topic)));
         }
 
         try (KafkaConsumer<byte[], byte[]> consumer = newConsumer(groupProtocol, null)) {
-            assertThrows(InvalidGroupIdException.class, () -> consumer.committed(Collections.singleton(tp0)).get(tp0));
+            assertThrows(InvalidGroupIdException.class, () -> consumer.committed(Set.of(tp0)).get(tp0));
         }
 
         try (KafkaConsumer<byte[], byte[]> consumer = newConsumer(groupProtocol, null)) {
@@ -1997,9 +2002,9 @@ public class KafkaConsumerTest {
     @EnumSource(GroupProtocol.class)
     public void testOperationsByAssigningConsumerWithDefaultGroupId(GroupProtocol groupProtocol) {
         try (KafkaConsumer<byte[], byte[]> consumer = newConsumer(groupProtocol, null)) {
-            consumer.assign(singleton(tp0));
+            consumer.assign(Set.of(tp0));
 
-            assertThrows(InvalidGroupIdException.class, () -> consumer.committed(Collections.singleton(tp0)).get(tp0));
+            assertThrows(InvalidGroupIdException.class, () -> consumer.committed(Set.of(tp0)).get(tp0));
             assertThrows(InvalidGroupIdException.class, consumer::commitAsync);
             assertThrows(InvalidGroupIdException.class, consumer::commitSync);
         }
@@ -2013,12 +2018,12 @@ public class KafkaConsumerTest {
         props.put(ConsumerConfig.BOOTSTRAP_SERVERS_CONFIG, "localhost:9000");
         KafkaConsumer<byte[], byte[]> consumer = newConsumer(props, new ByteArrayDeserializer(), new ByteArrayDeserializer());
         assertEquals(Sensor.RecordingLevel.INFO, consumer.metricsRegistry().config().recordLevel());
-        consumer.close(Duration.ZERO);
+        consumer.close(CloseOptions.timeout(Duration.ZERO));
 
         props.put(ConsumerConfig.METRICS_RECORDING_LEVEL_CONFIG, "DEBUG");
         KafkaConsumer<byte[], byte[]> consumer2 = newConsumer(props, new ByteArrayDeserializer(), new ByteArrayDeserializer());
         assertEquals(Sensor.RecordingLevel.DEBUG, consumer2.metricsRegistry().config().recordLevel());
-        consumer2.close(Duration.ZERO);
+        consumer2.close(CloseOptions.timeout(Duration.ZERO));
     }
 
     // TODO: this test references RPCs to be sent that are not part of the CONSUMER group protocol.
@@ -2030,17 +2035,17 @@ public class KafkaConsumerTest {
         ConsumerMetadata metadata = createMetadata(subscription);
         MockClient client = new MockClient(time, metadata);
 
-        initMetadata(client, Collections.singletonMap(topic, 1));
+        initMetadata(client, Map.of(topic, 1));
         Node node = metadata.fetch().nodes().get(0);
 
         consumer = newConsumer(groupProtocol, time, client, subscription, metadata, assignor, false, groupInstanceId);
-        consumer.subscribe(singleton(topic), getConsumerRebalanceListener(consumer));
+        consumer.subscribe(Set.of(topic), getConsumerRebalanceListener(consumer));
         client.prepareResponseFrom(FindCoordinatorResponse.prepareResponse(Errors.NONE, groupId, node), node);
         Node coordinator = new Node(Integer.MAX_VALUE - node.id(), node.host(), node.port());
 
 
         client.prepareResponseFrom(joinGroupFollowerResponse(assignor, 1, memberId, leaderId, Errors.NONE), coordinator);
-        client.prepareResponseFrom(syncGroupResponse(singletonList(tp0), Errors.NONE), coordinator);
+        client.prepareResponseFrom(syncGroupResponse(List.of(tp0), Errors.NONE), coordinator);
 
         client.prepareResponseFrom(fetchResponse(tp0, 0, 1), node);
         client.prepareResponseFrom(fetchResponse(tp0, 1, 0), node);
@@ -2053,7 +2058,7 @@ public class KafkaConsumerTest {
             new HeartbeatResponseData().setErrorCode(Errors.REBALANCE_IN_PROGRESS.code())), coordinator);
 
         // join group
-        final ByteBuffer byteBuffer = ConsumerProtocol.serializeSubscription(new ConsumerPartitionAssignor.Subscription(singletonList(topic)));
+        final ByteBuffer byteBuffer = ConsumerProtocol.serializeSubscription(new ConsumerPartitionAssignor.Subscription(List.of(topic)));
 
         // This member becomes the leader
         final JoinGroupResponse leaderResponse = new JoinGroupResponse(
@@ -2061,7 +2066,7 @@ public class KafkaConsumerTest {
                         .setErrorCode(Errors.NONE.code())
                         .setGenerationId(1).setProtocolName(assignor.name())
                         .setLeader(memberId).setMemberId(memberId)
-                        .setMembers(Collections.singletonList(
+                        .setMembers(List.of(
                                 new JoinGroupResponseData.JoinGroupResponseMember()
                                         .setMemberId(memberId)
                                         .setMetadata(byteBuffer.array())
@@ -2073,14 +2078,14 @@ public class KafkaConsumerTest {
         client.prepareResponseFrom(leaderResponse, coordinator);
 
         // sync group fails due to disconnect
-        client.prepareResponseFrom(syncGroupResponse(singletonList(tp0), Errors.NONE), coordinator, true);
+        client.prepareResponseFrom(syncGroupResponse(List.of(tp0), Errors.NONE), coordinator, true);
 
         // should try and find the new coordinator
         client.prepareResponseFrom(FindCoordinatorResponse.prepareResponse(Errors.NONE, groupId, node), node);
 
         // rejoin group
         client.prepareResponseFrom(joinGroupFollowerResponse(assignor, 1, memberId, leaderId, Errors.NONE), coordinator);
-        client.prepareResponseFrom(syncGroupResponse(singletonList(tp0), Errors.NONE), coordinator);
+        client.prepareResponseFrom(syncGroupResponse(List.of(tp0), Errors.NONE), coordinator);
 
         client.prepareResponseFrom(body -> body instanceof FetchRequest 
             && ((FetchRequest) body).fetchData(topicNames).containsKey(new TopicIdPartition(topicId, tp0)), fetchResponse(tp0, 1, 1), node);
@@ -2100,14 +2105,14 @@ public class KafkaConsumerTest {
         ConsumerMetadata metadata = createMetadata(subscription);
         MockClient client = new MockClient(time, metadata);
 
-        initMetadata(client, Collections.singletonMap(topic, 1));
+        initMetadata(client, Map.of(topic, 1));
         Node node = metadata.fetch().nodes().get(0);
 
         final KafkaConsumer<String, String> consumer = newConsumer(groupProtocol, time, client, subscription, metadata, assignor, false, Optional.empty());
-        consumer.subscribe(singleton(topic), getConsumerRebalanceListener(consumer));
-        Node coordinator = prepareRebalance(client, node, assignor, singletonList(tp0), null);
+        consumer.subscribe(Set.of(topic), getConsumerRebalanceListener(consumer));
+        Node coordinator = prepareRebalance(client, node, assignor, List.of(tp0), null);
 
-        client.prepareMetadataUpdate(RequestTestUtils.metadataUpdateWithIds(1, Collections.singletonMap(topic, 1), topicIds));
+        client.prepareMetadataUpdate(RequestTestUtils.metadataUpdateWithIds(1, Map.of(topic, 1), topicIds));
 
         consumer.updateAssignmentMetadataIfNeeded(time.timer(Long.MAX_VALUE));
 
@@ -2125,7 +2130,7 @@ public class KafkaConsumerTest {
             Future<?> future = executor.submit(() -> {
                 consumer.commitAsync();
                 try {
-                    consumer.close(Duration.ofMillis(closeTimeoutMs));
+                    consumer.close(CloseOptions.timeout(Duration.ofMillis(closeTimeoutMs)));
                 } catch (Exception e) {
                     closeException.set(e);
                 }
@@ -2192,7 +2197,7 @@ public class KafkaConsumerTest {
         ConsumerMetadata metadata = createMetadata(subscription);
         MockClient client = new MockClient(time, metadata);
 
-        initMetadata(client, Collections.singletonMap(topic, 1));
+        initMetadata(client, Map.of(topic, 1));
         Cluster cluster = metadata.fetch();
 
         MetadataResponse updateResponse = RequestTestUtils.metadataResponse(cluster.nodes(),
@@ -2210,8 +2215,9 @@ public class KafkaConsumerTest {
     @ParameterizedTest
     @EnumSource(value = GroupProtocol.class, names = "CLASSIC")
     public void testPartitionsForAuthenticationFailure(GroupProtocol groupProtocol) {
-        final KafkaConsumer<String, String> consumer = consumerWithPendingAuthenticationError(groupProtocol);
-        assertThrows(AuthenticationException.class, () -> consumer.partitionsFor("some other topic"));
+        try (final KafkaConsumer<String, String> consumer = consumerWithPendingAuthenticationError(groupProtocol)) {
+            assertThrows(AuthenticationException.class, () -> consumer.partitionsFor("some other topic"));
+        }
     }
 
     // TODO: this test triggers a bug with the CONSUMER group protocol implementation.
@@ -2219,8 +2225,9 @@ public class KafkaConsumerTest {
     @ParameterizedTest
     @EnumSource(value = GroupProtocol.class, names = "CLASSIC")
     public void testBeginningOffsetsAuthenticationFailure(GroupProtocol groupProtocol) {
-        final KafkaConsumer<String, String> consumer = consumerWithPendingAuthenticationError(groupProtocol);
-        assertThrows(AuthenticationException.class, () -> consumer.beginningOffsets(Collections.singleton(tp0)));
+        try (final KafkaConsumer<String, String> consumer = consumerWithPendingAuthenticationError(groupProtocol)) {
+            assertThrows(AuthenticationException.class, () -> consumer.beginningOffsets(Set.of(tp0)));
+        }
     }
 
     // TODO: this test triggers a bug with the CONSUMER group protocol implementation.
@@ -2228,15 +2235,16 @@ public class KafkaConsumerTest {
     @ParameterizedTest
     @EnumSource(value = GroupProtocol.class, names = "CLASSIC")
     public void testEndOffsetsAuthenticationFailure(GroupProtocol groupProtocol) {
-        final KafkaConsumer<String, String> consumer = consumerWithPendingAuthenticationError(groupProtocol);
-        assertThrows(AuthenticationException.class, () -> consumer.endOffsets(Collections.singleton(tp0)));
+        try (final KafkaConsumer<String, String> consumer = consumerWithPendingAuthenticationError(groupProtocol)) {
+            assertThrows(AuthenticationException.class, () -> consumer.endOffsets(Set.of(tp0)));
+        }
     }
 
     @ParameterizedTest
     @EnumSource(GroupProtocol.class)
     public void testPollAuthenticationFailure(GroupProtocol groupProtocol) throws InterruptedException {
         final KafkaConsumer<String, String> consumer = consumerWithPendingAuthenticationError(groupProtocol);
-        consumer.subscribe(singleton(topic));
+        consumer.subscribe(Set.of(topic));
 
         if (groupProtocol == GroupProtocol.CONSUMER) {
             // New consumer poll(ZERO) needs to wait for the event added by a call to poll, to be processed
@@ -2254,8 +2262,9 @@ public class KafkaConsumerTest {
     @ParameterizedTest
     @EnumSource(value = GroupProtocol.class, names = "CLASSIC")
     public void testOffsetsForTimesAuthenticationFailure(GroupProtocol groupProtocol) {
-        final KafkaConsumer<String, String> consumer = consumerWithPendingAuthenticationError(groupProtocol);
-        assertThrows(AuthenticationException.class, () -> consumer.offsetsForTimes(singletonMap(tp0, 0L)));
+        try (final KafkaConsumer<String, String> consumer = consumerWithPendingAuthenticationError(groupProtocol)) {
+            assertThrows(AuthenticationException.class, () -> consumer.offsetsForTimes(Map.of(tp0, 0L)));
+        }
     }
 
     // TODO: this test triggers a bug with the CONSUMER group protocol implementation.
@@ -2263,10 +2272,10 @@ public class KafkaConsumerTest {
     @ParameterizedTest
     @EnumSource(value = GroupProtocol.class, names = "CLASSIC")
     public void testCommitSyncAuthenticationFailure(GroupProtocol groupProtocol) {
-        final KafkaConsumer<String, String> consumer = consumerWithPendingAuthenticationError(groupProtocol);
-        Map<TopicPartition, OffsetAndMetadata> offsets = new HashMap<>();
-        offsets.put(tp0, new OffsetAndMetadata(10L));
-        assertThrows(AuthenticationException.class, () -> consumer.commitSync(offsets));
+        try (final KafkaConsumer<String, String> consumer = consumerWithPendingAuthenticationError(groupProtocol)) {
+            Map<TopicPartition, OffsetAndMetadata> offsets = Map.of(tp0, new OffsetAndMetadata(10L));
+            assertThrows(AuthenticationException.class, () -> consumer.commitSync(offsets));
+        }
     }
 
     // TODO: this test triggers a bug with the CONSUMER group protocol implementation.
@@ -2274,24 +2283,27 @@ public class KafkaConsumerTest {
     @ParameterizedTest
     @EnumSource(value = GroupProtocol.class, names = "CLASSIC")
     public void testCommittedAuthenticationFailure(GroupProtocol groupProtocol) {
-        final KafkaConsumer<String, String> consumer = consumerWithPendingAuthenticationError(groupProtocol);
-        assertThrows(AuthenticationException.class, () -> consumer.committed(Collections.singleton(tp0)).get(tp0));
+        try (final KafkaConsumer<String, String> consumer = consumerWithPendingAuthenticationError(groupProtocol)) {
+            assertThrows(AuthenticationException.class, () -> consumer.committed(Set.of(tp0)).get(tp0));
+        }
     }
 
     @ParameterizedTest
     @EnumSource(value = GroupProtocol.class)
     public void testMeasureCommitSyncDurationOnFailure(GroupProtocol groupProtocol) {
-        final KafkaConsumer<String, String> consumer
-            = consumerWithPendingError(groupProtocol, new MockTime(Duration.ofSeconds(1).toMillis()));
+        try (final KafkaConsumer<String, String> consumer
+            = consumerWithPendingError(groupProtocol, new MockTime(Duration.ofSeconds(1).toMillis()))) {
 
-        try {
-            consumer.commitSync(Collections.singletonMap(tp0, new OffsetAndMetadata(10L)));
-        } catch (final RuntimeException e) {
+            try {
+                consumer.commitSync(Map.of(tp0, new OffsetAndMetadata(10L)));
+            } catch (final RuntimeException swallow) {
+                // swallow
+            }
+
+            final Metric metric = consumer.metrics()
+                    .get(consumer.metricsRegistry().metricName("commit-sync-time-ns-total", "consumer-metrics"));
+            assertTrue((Double) metric.metricValue() >= Duration.ofMillis(999).toNanos());
         }
-
-        final Metric metric = consumer.metrics()
-            .get(consumer.metricsRegistry().metricName("commit-sync-time-ns-total", "consumer-metrics"));
-        assertTrue((Double) metric.metricValue() >= Duration.ofMillis(999).toNanos());
     }
 
     @ParameterizedTest
@@ -2302,21 +2314,21 @@ public class KafkaConsumerTest {
             AutoOffsetResetStrategy.EARLIEST);
         ConsumerMetadata metadata = createMetadata(subscription);
         MockClient client = new MockClient(time, metadata);
-        initMetadata(client, Collections.singletonMap(topic, 2));
+        initMetadata(client, Map.of(topic, 2));
         Node node = metadata.fetch().nodes().get(0);
         KafkaConsumer<String, String> consumer = newConsumer(groupProtocol, time, client, subscription, metadata,
             assignor, true, groupInstanceId);
-        consumer.assign(singletonList(tp0));
+        consumer.assign(List.of(tp0));
 
         client.prepareResponseFrom(
             FindCoordinatorResponse.prepareResponse(Errors.NONE, groupId, node), node);
         Node coordinator = new Node(Integer.MAX_VALUE - node.id(), node.host(), node.port());
         client.prepareResponseFrom(
-            offsetCommitResponse(Collections.singletonMap(tp0, Errors.NONE)),
+            offsetCommitResponse(Map.of(tp0, Errors.NONE)),
             coordinator
         );
 
-        consumer.commitSync(Collections.singletonMap(tp0, new OffsetAndMetadata(10L)));
+        consumer.commitSync(Map.of(tp0, new OffsetAndMetadata(10L)));
 
         final Metric metric = consumer.metrics()
             .get(consumer.metricsRegistry().metricName("commit-sync-time-ns-total", "consumer-metrics"));
@@ -2326,17 +2338,19 @@ public class KafkaConsumerTest {
     @ParameterizedTest
     @EnumSource(value = GroupProtocol.class)
     public void testMeasureCommittedDurationOnFailure(GroupProtocol groupProtocol) {
-        final KafkaConsumer<String, String> consumer
-            = consumerWithPendingError(groupProtocol, new MockTime(Duration.ofSeconds(1).toMillis()));
+        try (final KafkaConsumer<String, String> consumer
+            = consumerWithPendingError(groupProtocol, new MockTime(Duration.ofSeconds(1).toMillis()))) {
 
-        try {
-            consumer.committed(Collections.singleton(tp0));
-        } catch (final RuntimeException e) {
+            try {
+                consumer.committed(Set.of(tp0));
+            } catch (final RuntimeException swallow) {
+                // swallow
+            }
+
+            final Metric metric = consumer.metrics()
+                    .get(consumer.metricsRegistry().metricName("committed-time-ns-total", "consumer-metrics"));
+            assertTrue((Double) metric.metricValue() >= Duration.ofMillis(999).toNanos());
         }
-
-        final Metric metric = consumer.metrics()
-            .get(consumer.metricsRegistry().metricName("committed-time-ns-total", "consumer-metrics"));
-        assertTrue((Double) metric.metricValue() >= Duration.ofMillis(999).toNanos());
     }
 
     @ParameterizedTest
@@ -2348,11 +2362,11 @@ public class KafkaConsumerTest {
             AutoOffsetResetStrategy.EARLIEST);
         ConsumerMetadata metadata = createMetadata(subscription);
         MockClient client = new MockClient(time, metadata);
-        initMetadata(client, Collections.singletonMap(topic, 2));
+        initMetadata(client, Map.of(topic, 2));
         Node node = metadata.fetch().nodes().get(0);
         KafkaConsumer<String, String> consumer = newConsumer(groupProtocol, time, client, subscription, metadata,
             assignor, true, groupInstanceId);
-        consumer.assign(singletonList(tp0));
+        consumer.assign(List.of(tp0));
 
         // lookup coordinator
         client.prepareResponseFrom(
@@ -2361,9 +2375,9 @@ public class KafkaConsumerTest {
 
         // fetch offset for one topic
         client.prepareResponseFrom(
-            offsetResponse(Collections.singletonMap(tp0, offset1), Errors.NONE), coordinator);
+            offsetResponse(Map.of(tp0, offset1), Errors.NONE), coordinator);
 
-        consumer.committed(Collections.singleton(tp0)).get(tp0).offset();
+        consumer.committed(Set.of(tp0)).get(tp0).offset();
 
         final Metric metric = consumer.metrics()
             .get(consumer.metricsRegistry().metricName("committed-time-ns-total", "consumer-metrics"));
@@ -2378,30 +2392,30 @@ public class KafkaConsumerTest {
         ConsumerMetadata metadata = createMetadata(subscription);
         MockClient client = new MockClient(time, metadata);
 
-        initMetadata(client, Collections.singletonMap(topic, 1));
+        initMetadata(client, Map.of(topic, 1));
         Node node = metadata.fetch().nodes().get(0);
 
         KafkaConsumer<String, String> consumer = newConsumer(groupProtocol, time, client, subscription, metadata, assignor, true, groupInstanceId);
 
-        consumer.subscribe(singleton(topic), getExceptionConsumerRebalanceListener());
+        consumer.subscribe(Set.of(topic), getExceptionConsumerRebalanceListener());
         Node coordinator = new Node(Integer.MAX_VALUE - node.id(), node.host(), node.port());
 
         client.prepareResponseFrom(FindCoordinatorResponse.prepareResponse(Errors.NONE, groupId, node), node);
         client.prepareResponseFrom(joinGroupFollowerResponse(assignor, 1, memberId, leaderId, Errors.NONE), coordinator);
-        client.prepareResponseFrom(syncGroupResponse(singletonList(tp0), Errors.NONE), coordinator);
+        client.prepareResponseFrom(syncGroupResponse(List.of(tp0), Errors.NONE), coordinator);
 
         // assign throws
         KafkaException exc = assertThrows(KafkaException.class, () -> consumer.updateAssignmentMetadataIfNeeded(time.timer(Long.MAX_VALUE)));
         assertEquals(partitionAssigned + singleTopicPartition, exc.getCause().getMessage());
 
         // the assignment is still updated regardless of the exception
-        assertEquals(singleton(tp0), subscription.assignedPartitions());
+        assertEquals(Set.of(tp0), subscription.assignedPartitions());
 
         // close's revoke throws
-        exc = assertThrows(KafkaException.class, () -> consumer.close(Duration.ofMillis(0)));
+        exc = assertThrows(KafkaException.class, () -> consumer.close(CloseOptions.timeout(Duration.ofMillis(0))));
         assertEquals(partitionRevoked + singleTopicPartition, exc.getCause().getCause().getMessage());
 
-        consumer.close(Duration.ofMillis(0));
+        consumer.close(CloseOptions.timeout(Duration.ofMillis(0)));
 
         // the assignment is still updated regardless of the exception
         assertTrue(subscription.assignedPartitions().isEmpty());
@@ -2446,9 +2460,9 @@ public class KafkaConsumerTest {
         assertEquals(11, records.count());
         assertEquals(1L, consumer.position(tp0));
         assertEquals(10L, consumer.position(t2p0));
-        assertEquals(records.nextOffsets().size(), 2);
-        assertEquals(records.nextOffsets().get(tp0), new OffsetAndMetadata(1L, Optional.empty(), ""));
-        assertEquals(records.nextOffsets().get(t2p0), new OffsetAndMetadata(10L, Optional.empty(), ""));
+        assertEquals(2, records.nextOffsets().size());
+        assertEquals(new OffsetAndMetadata(1L), records.nextOffsets().get(tp0));
+        assertEquals(new OffsetAndMetadata(10L), records.nextOffsets().get(t2p0));
 
         // prepare the next response of the prefetch
         fetches1.clear();
@@ -2478,11 +2492,11 @@ public class KafkaConsumerTest {
 
         // verify that the fetch still occurred as expected
         assertEquals(Set.of(topic, topic3), consumer.subscription());
-        assertEquals(Collections.singleton(tp0), consumer.assignment());
+        assertEquals(Set.of(tp0), consumer.assignment());
         assertEquals(1, records.count());
         assertEquals(2L, consumer.position(tp0));
-        assertEquals(records.nextOffsets().size(), 1);
-        assertEquals(records.nextOffsets().get(tp0), new OffsetAndMetadata(2L, Optional.empty(), ""));
+        assertEquals(1, records.nextOffsets().size());
+        assertEquals(new OffsetAndMetadata(2L), records.nextOffsets().get(tp0));
 
         // verify that the offset commits occurred as expected
         assertTrue(commitReceived.get());
@@ -2496,11 +2510,11 @@ public class KafkaConsumerTest {
 
         // should not finish the response yet
         assertEquals(Set.of(topic, topic3), consumer.subscription());
-        assertEquals(Collections.singleton(tp0), consumer.assignment());
+        assertEquals(Set.of(tp0), consumer.assignment());
         assertEquals(1, records.count());
         assertEquals(3L, consumer.position(tp0));
-        assertEquals(records.nextOffsets().size(), 1);
-        assertEquals(records.nextOffsets().get(tp0), new OffsetAndMetadata(3L, Optional.empty(), ""));
+        assertEquals(1, records.nextOffsets().size());
+        assertEquals(new OffsetAndMetadata(3L), records.nextOffsets().get(tp0));
 
         fetches1.clear();
         fetches1.put(tp0, new FetchInfo(3, 1));
@@ -2522,8 +2536,8 @@ public class KafkaConsumerTest {
         assertEquals(Set.of(tp0, t3p0), consumer.assignment());
         assertEquals(4L, consumer.position(tp0));
         assertEquals(0L, consumer.position(t3p0));
-        assertEquals(recs1.get().nextOffsets().size(), 1);
-        assertEquals(recs1.get().nextOffsets().get(tp0), new OffsetAndMetadata(4L, Optional.empty(), ""));
+        assertEquals(1, recs1.get().nextOffsets().size());
+        assertEquals(new OffsetAndMetadata(4L), recs1.get().nextOffsets().get(tp0));
 
         fetches1.clear();
         fetches1.put(tp0, new FetchInfo(4, 1));
@@ -2540,13 +2554,13 @@ public class KafkaConsumerTest {
 
         assertEquals(5L, consumer.position(tp0));
         assertEquals(100L, consumer.position(t3p0));
-        assertEquals(recs2.get().nextOffsets().size(), 2);
-        assertEquals(recs2.get().nextOffsets().get(tp0), new OffsetAndMetadata(5L, Optional.empty(), ""));
-        assertEquals(recs2.get().nextOffsets().get(t3p0), new OffsetAndMetadata(100L, Optional.empty(), ""));
+        assertEquals(2, recs2.get().nextOffsets().size());
+        assertEquals(new OffsetAndMetadata(5L), recs2.get().nextOffsets().get(tp0));
+        assertEquals(new OffsetAndMetadata(100L), recs2.get().nextOffsets().get(t3p0));
 
         client.requests().clear();
         consumer.unsubscribe();
-        consumer.close(Duration.ZERO);
+        consumer.close(CloseOptions.timeout(Duration.ZERO));
     }
 
     // TODO: this test requires rebalance logic which is not yet implemented in the CONSUMER group protocol.
@@ -2557,7 +2571,7 @@ public class KafkaConsumerTest {
         final ConsumerMetadata metadata = createMetadata(subscription);
         final MockClient client = new MockClient(time, metadata);
 
-        initMetadata(client, Collections.singletonMap(topic, 1));
+        initMetadata(client, Map.of(topic, 1));
         final Node node = metadata.fetch().nodes().get(0);
 
         final KafkaConsumer<String, String> consumer = newConsumer(groupProtocol, time, client, subscription, metadata, assignor, true, groupInstanceId);
@@ -2568,8 +2582,8 @@ public class KafkaConsumerTest {
         assertEquals(JoinGroupRequest.UNKNOWN_GENERATION_ID, groupMetadataOnStart.generationId());
         assertEquals(groupInstanceId, groupMetadataOnStart.groupInstanceId());
 
-        consumer.subscribe(singleton(topic), getConsumerRebalanceListener(consumer));
-        prepareRebalance(client, node, assignor, singletonList(tp0), null);
+        consumer.subscribe(Set.of(topic), getConsumerRebalanceListener(consumer));
+        prepareRebalance(client, node, assignor, List.of(tp0), null);
 
         // initial fetch
         client.prepareResponseFrom(fetchResponse(tp0, 0, 0), node);
@@ -2587,10 +2601,10 @@ public class KafkaConsumerTest {
     public void testInvalidGroupMetadata(GroupProtocol groupProtocol) throws InterruptedException {
         ConsumerMetadata metadata = createMetadata(subscription);
         MockClient client = new MockClient(time, metadata);
-        initMetadata(client, Collections.singletonMap(topic, 1));
+        initMetadata(client, Map.of(topic, 1));
         KafkaConsumer<String, String> consumer = newConsumer(groupProtocol, time, client, subscription, metadata,
                 new RoundRobinAssignor(), true, groupInstanceId);
-        consumer.subscribe(singletonList(topic));
+        consumer.subscribe(List.of(topic));
         // concurrent access is illegal
         client.enableBlockingUntilWakeup(1);
         ExecutorService service = Executors.newSingleThreadExecutor();
@@ -2606,7 +2620,7 @@ public class KafkaConsumerTest {
         }
 
         // accessing closed consumer is illegal
-        consumer.close(Duration.ZERO);
+        consumer.close(CloseOptions.timeout(Duration.ZERO));
         assertThrows(IllegalStateException.class, consumer::groupMetadata);
     }
 
@@ -2617,14 +2631,14 @@ public class KafkaConsumerTest {
         final ConsumerMetadata metadata = createMetadata(subscription);
         final MockClient client = new MockClient(time, metadata);
 
-        initMetadata(client, singletonMap(topic, 1));
+        initMetadata(client, Map.of(topic, 1));
 
         consumer = newConsumer(groupProtocol, time, client, subscription, metadata, assignor, true, groupInstanceId);
 
         // throws for unassigned partition
         assertThrows(IllegalStateException.class, () -> consumer.currentLag(tp0));
 
-        consumer.assign(singleton(tp0));
+        consumer.assign(Set.of(tp0));
 
         // poll once to update with the current metadata
         consumer.poll(Duration.ofMillis(0));
@@ -2656,7 +2670,7 @@ public class KafkaConsumerTest {
         // poll once again, which should return the list-offset response
         // and hence next call would return correct lag result
         ClientRequest listOffsetRequest = findRequest(client, ApiKeys.LIST_OFFSETS);
-        client.respondToRequest(listOffsetRequest, listOffsetsResponse(singletonMap(tp0, 90L)));
+        client.respondToRequest(listOffsetRequest, listOffsetsResponse(Map.of(tp0, 90L)));
         consumer.poll(Duration.ofMillis(0));
 
         // For AsyncKafkaConsumer, subscription state is updated in background, so the result will eventually be updated.
@@ -2670,13 +2684,13 @@ public class KafkaConsumerTest {
         // one successful fetch should update the log end offset and the position
         ClientRequest fetchRequest = findRequest(client, ApiKeys.FETCH);
         final FetchInfo fetchInfo = new FetchInfo(1L, 99L, 50L, 5);
-        client.respondToRequest(fetchRequest, fetchResponse(singletonMap(tp0, fetchInfo)));
+        client.respondToRequest(fetchRequest, fetchResponse(Map.of(tp0, fetchInfo)));
 
         final ConsumerRecords<String, String> records = (ConsumerRecords<String, String>) consumer.poll(Duration.ofMillis(1));
         assertEquals(5, records.count());
         assertEquals(55L, consumer.position(tp0));
-        assertEquals(records.nextOffsets().size(), 1);
-        assertEquals(records.nextOffsets().get(tp0), new OffsetAndMetadata(55L, Optional.empty(), ""));
+        assertEquals(1, records.nextOffsets().size());
+        assertEquals(new OffsetAndMetadata(55L), records.nextOffsets().get(tp0));
 
         // correct lag result
         assertEquals(OptionalLong.of(45L), consumer.currentLag(tp0));
@@ -2688,15 +2702,15 @@ public class KafkaConsumerTest {
         final ConsumerMetadata metadata = createMetadata(subscription);
         final MockClient client = new MockClient(time, metadata);
 
-        initMetadata(client, singletonMap(topic, 1));
+        initMetadata(client, Map.of(topic, 1));
 
         consumer = newConsumer(groupProtocol, time, client, subscription, metadata, assignor, false,
                 null, groupInstanceId, false);
-        consumer.assign(singleton(tp0));
+        consumer.assign(Set.of(tp0));
         consumer.seek(tp0, 50L);
 
-        client.prepareResponse(request -> request instanceof ListOffsetsRequest, listOffsetsResponse(singletonMap(tp0, 90L)));
-        assertEquals(singletonMap(tp0, 90L), consumer.endOffsets(Collections.singleton(tp0)));
+        client.prepareResponse(request -> request instanceof ListOffsetsRequest, listOffsetsResponse(Map.of(tp0, 90L)));
+        assertEquals(Map.of(tp0, 90L), consumer.endOffsets(Set.of(tp0)));
         // correct lag result should be returned as well
         assertEquals(OptionalLong.of(40L), consumer.currentLag(tp0));
     }
@@ -2712,7 +2726,7 @@ public class KafkaConsumerTest {
         ConsumerMetadata metadata = createMetadata(subscription);
         MockClient client = new MockClient(time, metadata);
 
-        initMetadata(client, singletonMap(topic, 1));
+        initMetadata(client, Map.of(topic, 1));
         Node node = metadata.fetch().nodes().get(0);
 
         ConsumerPartitionAssignor assignor = new RangeAssignor();
@@ -2841,7 +2855,7 @@ public class KafkaConsumerTest {
     }
 
     private AtomicBoolean prepareOffsetCommitResponse(MockClient client, Node coordinator, final TopicPartition partition, final long offset) {
-        return prepareOffsetCommitResponse(client, coordinator, Collections.singletonMap(partition, offset));
+        return prepareOffsetCommitResponse(client, coordinator, Map.of(partition, offset));
     }
 
     private OffsetCommitResponse offsetCommitResponse(Map<TopicPartition, Errors> responseData) {
@@ -2955,7 +2969,7 @@ public class KafkaConsumerTest {
 
     private FetchResponse fetchResponse(TopicPartition partition, long fetchOffset, int count) {
         FetchInfo fetchInfo = new FetchInfo(fetchOffset, count);
-        return fetchResponse(Collections.singletonMap(partition, fetchInfo));
+        return fetchResponse(Map.of(partition, fetchInfo));
     }
 
     private KafkaConsumer<String, String> newConsumer(GroupProtocol groupProtocol,
@@ -3038,7 +3052,7 @@ public class KafkaConsumerTest {
         Deserializer<String> keyDeserializer = new StringDeserializer();
         Deserializer<String> valueDeserializer = valueDeserializerOpt.orElse(new StringDeserializer());
         LogContext logContext = new LogContext();
-        List<ConsumerPartitionAssignor> assignors = singletonList(assignor);
+        List<ConsumerPartitionAssignor> assignors = List.of(assignor);
         ConsumerConfig config = newConsumerConfig(
             groupProtocol,
             autoCommitEnabled,
@@ -3133,7 +3147,7 @@ public class KafkaConsumerTest {
         ConsumerMetadata metadata = createMetadata(subscription);
         MockClient client = new MockClient(time, metadata);
 
-        initMetadata(client, Collections.singletonMap(topic, 1));
+        initMetadata(client, Map.of(topic, 1));
         Cluster cluster = metadata.fetch();
 
         String invalidTopicName = "topic abc";  // Invalid topic name due to space
@@ -3148,7 +3162,7 @@ public class KafkaConsumerTest {
         client.prepareMetadataUpdate(updateResponse);
 
         KafkaConsumer<String, String> consumer = newConsumer(groupProtocol, time, client, subscription, metadata, assignor, true, groupInstanceId);
-        consumer.subscribe(singleton(invalidTopicName), getConsumerRebalanceListener(consumer));
+        consumer.subscribe(Set.of(invalidTopicName), getConsumerRebalanceListener(consumer));
 
         if (groupProtocol == GroupProtocol.CONSUMER) {
             // New consumer poll(ZERO) needs to wait for the event added by a call to poll, to be processed
@@ -3178,10 +3192,10 @@ public class KafkaConsumerTest {
     public void testPollTimeMetrics(GroupProtocol groupProtocol) {
         ConsumerMetadata metadata = createMetadata(subscription);
         MockClient client = new MockClient(time, metadata);
-        initMetadata(client, Collections.singletonMap(topic, 1));
+        initMetadata(client, Map.of(topic, 1));
 
         KafkaConsumer<String, String> consumer = newConsumer(groupProtocol, time, client, subscription, metadata, assignor, true, groupInstanceId);
-        consumer.subscribe(singletonList(topic));
+        consumer.subscribe(List.of(topic));
         // MetricName objects to check
         Metrics metrics = consumer.metricsRegistry();
         MetricName lastPollSecondsAgoName = metrics.metricName("last-poll-seconds-ago", "consumer-metrics");
@@ -3224,7 +3238,7 @@ public class KafkaConsumerTest {
 public void testPollIdleRatio(GroupProtocol groupProtocol) {
         ConsumerMetadata metadata = createMetadata(subscription);
         MockClient client = new MockClient(time, metadata);
-        initMetadata(client, Collections.singletonMap(topic, 1));
+        initMetadata(client, Map.of(topic, 1));
 
         KafkaConsumer<String, String> consumer = newConsumer(groupProtocol, time, client, subscription, metadata, assignor, true, groupInstanceId);
         // MetricName object to check
@@ -3268,14 +3282,14 @@ public void testPollIdleRatio(GroupProtocol groupProtocol) {
 
     @ParameterizedTest
     @EnumSource(GroupProtocol.class)
-public void testClosingConsumerUnregistersConsumerMetrics(GroupProtocol groupProtocol) {
+    public void testClosingConsumerUnregistersConsumerMetrics(GroupProtocol groupProtocol) {
         Time time = new MockTime(1L);
         ConsumerMetadata metadata = createMetadata(subscription);
         MockClient client = new MockClient(time, metadata);
-        initMetadata(client, Collections.singletonMap(topic, 1));
+        initMetadata(client, Map.of(topic, 1));
         KafkaConsumer<String, String> consumer = newConsumer(groupProtocol, time, client, subscription, metadata,
             new RoundRobinAssignor(), true, groupInstanceId);
-        consumer.subscribe(singletonList(topic));
+        consumer.subscribe(List.of(topic));
         assertTrue(consumerMetricPresent(consumer, "last-poll-seconds-ago"));
         assertTrue(consumerMetricPresent(consumer, "time-between-poll-avg"));
         assertTrue(consumerMetricPresent(consumer, "time-between-poll-max"));
@@ -3290,7 +3304,7 @@ public void testClosingConsumerUnregistersConsumerMetrics(GroupProtocol groupPro
     @EnumSource(value = GroupProtocol.class, names = "CLASSIC")
     public void testEnforceRebalanceWithManualAssignment(GroupProtocol groupProtocol) {
         consumer = newConsumer(groupProtocol, null);
-        consumer.assign(singleton(new TopicPartition("topic", 0)));
+        consumer.assign(Set.of(new TopicPartition("topic", 0)));
         assertThrows(IllegalStateException.class, consumer::enforceRebalance);
     }
 
@@ -3314,15 +3328,15 @@ public void testClosingConsumerUnregistersConsumerMetrics(GroupProtocol groupPro
         consumer.poll(Duration.ZERO);
 
         // onPartitionsRevoked is not invoked when first joining the group
-        assertEquals(countingRebalanceListener.revokedCount, 0);
-        assertEquals(countingRebalanceListener.assignedCount, 1);
+        assertEquals(0, countingRebalanceListener.revokedCount);
+        assertEquals(1, countingRebalanceListener.assignedCount);
 
         consumer.enforceRebalance();
 
         // the next poll should trigger a rebalance
         consumer.poll(Duration.ZERO);
 
-        assertEquals(countingRebalanceListener.revokedCount, 1);
+        assertEquals(1, countingRebalanceListener.revokedCount);
     }
 
     // NOTE: this test uses the enforceRebalance API which is not implemented in the CONSUMER group protocol.
@@ -3346,7 +3360,7 @@ public void testClosingConsumerUnregistersConsumerMetrics(GroupProtocol groupPro
             true,
             groupInstanceId
         );
-        consumer.subscribe(Collections.singletonList(topic));
+        consumer.subscribe(List.of(topic));
 
         // Lookup coordinator.
         client.prepareResponseFrom(FindCoordinatorResponse.prepareResponse(Errors.NONE, groupId, node), node);
@@ -3442,8 +3456,9 @@ public void testClosingConsumerUnregistersConsumerMetrics(GroupProtocol groupPro
         final KafkaConsumer<String, String> consumer = consumerForCheckingTimeoutException(groupProtocol);
         assertEquals(
             "Failed to get offsets by times in 60000ms",
-            assertThrows(org.apache.kafka.common.errors.TimeoutException.class, () -> consumer.offsetsForTimes(singletonMap(tp0, 0L))).getMessage()
+            assertThrows(org.apache.kafka.common.errors.TimeoutException.class, () -> consumer.offsetsForTimes(Map.of(tp0, 0L))).getMessage()
         );
+        consumer.close(CloseOptions.timeout(Duration.ZERO));
     }
 
     @ParameterizedTest
@@ -3452,8 +3467,9 @@ public void testClosingConsumerUnregistersConsumerMetrics(GroupProtocol groupPro
         final KafkaConsumer<String, String> consumer = consumerForCheckingTimeoutException(groupProtocol);
         assertEquals(
             "Failed to get offsets by times in 60000ms",
-            assertThrows(org.apache.kafka.common.errors.TimeoutException.class, () -> consumer.beginningOffsets(singletonList(tp0))).getMessage()
+            assertThrows(org.apache.kafka.common.errors.TimeoutException.class, () -> consumer.beginningOffsets(List.of(tp0))).getMessage()
         );
+        consumer.close(CloseOptions.timeout(Duration.ZERO));
     }
 
     @ParameterizedTest
@@ -3462,8 +3478,9 @@ public void testClosingConsumerUnregistersConsumerMetrics(GroupProtocol groupPro
         final KafkaConsumer<String, String> consumer = consumerForCheckingTimeoutException(groupProtocol);
         assertEquals(
             "Failed to get offsets by times in 60000ms",
-            assertThrows(org.apache.kafka.common.errors.TimeoutException.class, () -> consumer.endOffsets(singletonList(tp0))).getMessage()
+            assertThrows(org.apache.kafka.common.errors.TimeoutException.class, () -> consumer.endOffsets(List.of(tp0))).getMessage()
         );
+        consumer.close(CloseOptions.timeout(Duration.ZERO));
     }
 
     @ParameterizedTest
@@ -3516,6 +3533,7 @@ public void testClosingConsumerUnregistersConsumerMetrics(GroupProtocol groupPro
         assertEquals("Telemetry is not enabled. Set config `enable.metrics.push` to `true`.", exception.getMessage());
     }
 
+    @SuppressWarnings("resource")
     @ParameterizedTest
     @EnumSource(GroupProtocol.class)
     public void testEmptyGroupId(GroupProtocol groupProtocol) {
@@ -3524,6 +3542,7 @@ public void testClosingConsumerUnregistersConsumerMetrics(GroupProtocol groupPro
         assertEquals("The configured group.id should not be an empty string or whitespace.", e.getCause().getMessage());
     }
 
+    @SuppressWarnings("resource")
     @ParameterizedTest
     @EnumSource(GroupProtocol.class)
     public void testGroupIdWithWhitespace(GroupProtocol groupProtocol) {
@@ -3536,7 +3555,7 @@ public void testClosingConsumerUnregistersConsumerMetrics(GroupProtocol groupPro
         ConsumerMetadata metadata = createMetadata(subscription);
         MockClient client = new MockClient(time, metadata);
 
-        initMetadata(client, singletonMap(topic, 1));
+        initMetadata(client, Map.of(topic, 1));
 
         ConsumerPartitionAssignor assignor = new RangeAssignor();
 
@@ -3556,7 +3575,7 @@ public void testClosingConsumerUnregistersConsumerMetrics(GroupProtocol groupPro
                 },
                 listOffsetsResponse(
                     Collections.emptyMap(),
-                    Collections.singletonMap(tp0, Errors.UNKNOWN_TOPIC_OR_PARTITION)
+                    Map.of(tp0, Errors.UNKNOWN_TOPIC_OR_PARTITION)
                 ));
         }
 
@@ -3571,20 +3590,20 @@ public void testClosingConsumerUnregistersConsumerMetrics(GroupProtocol groupPro
         ConsumerMetadata metadata = createMetadata(subscription);
         MockClient client = new MockClient(time, metadata);
         
-        initMetadata(client, Collections.singletonMap(topic, 2));
+        initMetadata(client, Map.of(topic, 2));
         Node node = metadata.fetch().nodes().get(0);
 
         client.prepareResponseFrom(FindCoordinatorResponse.prepareResponse(Errors.NONE, groupId, node), node);
         consumer = newConsumer(groupProtocol, time, client, subscription, metadata, assignor, true, groupInstanceId);
-        consumer.assign(singletonList(tp0));
+        consumer.assign(List.of(tp0));
         
         // lookup coordinator
         Node coordinator = new Node(Integer.MAX_VALUE - node.id(), node.host(), node.port());
         
         // try to get committed offsets for one topic-partition - but it is disconnected so there's no response and it will time out
-        client.prepareResponseFrom(offsetResponse(Collections.singletonMap(tp0, 0L), Errors.NONE), coordinator, true);
+        client.prepareResponseFrom(offsetResponse(Map.of(tp0, 0L), Errors.NONE), coordinator, true);
         org.apache.kafka.common.errors.TimeoutException timeoutException = assertThrows(org.apache.kafka.common.errors.TimeoutException.class,
-            () -> consumer.committed(Collections.singleton(tp0), Duration.ofMillis(1000L)));
+            () -> consumer.committed(Set.of(tp0), Duration.ofMillis(1000L)));
         assertEquals("Timeout of 1000ms expired before the last committed offset for partitions [test-0] could be determined. " +
             "Try tuning default.api.timeout.ms larger to relax the threshold.", timeoutException.getMessage());
     }
@@ -3594,10 +3613,10 @@ public void testClosingConsumerUnregistersConsumerMetrics(GroupProtocol groupPro
     public void testPreventMultiThread(GroupProtocol groupProtocol) throws InterruptedException {
         ConsumerMetadata metadata = createMetadata(subscription);
         MockClient client = new MockClient(time, metadata);
-        initMetadata(client, Collections.singletonMap(topic, 1));
+        initMetadata(client, Map.of(topic, 1));
         KafkaConsumer<String, String> consumer = newConsumer(groupProtocol, time, client, subscription, metadata,
                 new RoundRobinAssignor(), true, groupInstanceId);
-        consumer.subscribe(singletonList(topic));
+        consumer.subscribe(List.of(topic));
 
 
         client.enableBlockingUntilWakeup(1);
@@ -3619,13 +3638,13 @@ public void testClosingConsumerUnregistersConsumerMetrics(GroupProtocol groupPro
     public void testPollSendsRequestToJoin(GroupProtocol groupProtocol) throws InterruptedException {
         ConsumerMetadata metadata = createMetadata(subscription);
         MockClient client = new MockClient(time, metadata);
-        initMetadata(client, Collections.singletonMap(topic, 1));
+        initMetadata(client, Map.of(topic, 1));
         Node node = metadata.fetch().nodes().get(0);
 
         client.prepareResponseFrom(FindCoordinatorResponse.prepareResponse(Errors.NONE, groupId, node), node);
         KafkaConsumer<String, String> consumer = newConsumer(groupProtocol, time, client, subscription, metadata,
                 assignor, true, groupInstanceId);
-        consumer.subscribe(singletonList(topic));
+        consumer.subscribe(List.of(topic));
         assertFalse(groupProtocol == GroupProtocol.CLASSIC ?
                         requestGenerated(client, ApiKeys.JOIN_GROUP) :
                         requestGenerated(client, ApiKeys.CONSUMER_GROUP_HEARTBEAT),
@@ -3710,6 +3729,7 @@ public void testClosingConsumerUnregistersConsumerMetrics(GroupProtocol groupPro
             configs.put(ConsumerConfig.BOOTSTRAP_SERVERS_CONFIG, "localhost:9999");
             configs.put(ConsumerConfig.KEY_DESERIALIZER_CLASS_CONFIG, MonitorableDeserializer.class.getName());
             configs.put(ConsumerConfig.VALUE_DESERIALIZER_CLASS_CONFIG, MonitorableDeserializer.class.getName());
+            configs.put(ConsumerConfig.GROUP_PROTOCOL_CONFIG, groupProtocol.name);
             configs.put(ConsumerConfig.INTERCEPTOR_CLASSES_CONFIG, MonitorableInterceptor.class.getName());
 
             KafkaConsumer<String, String> consumer = new KafkaConsumer<>(configs);
@@ -3736,7 +3756,7 @@ public void testClosingConsumerUnregistersConsumerMetrics(GroupProtocol groupPro
             assertTrue(metrics.containsKey(expectedInterceptorMetric));
             assertEquals(VALUE, metrics.get(expectedInterceptorMetric).metricValue());
 
-            consumer.close(Duration.ZERO);
+            consumer.close(CloseOptions.timeout(Duration.ZERO));
             metrics = consumer.metrics();
             assertFalse(metrics.containsKey(expectedKeyDeserializerMetric));
             assertFalse(metrics.containsKey(expectedValueDeserializerMetric));
